@@ -2,32 +2,35 @@ package com.vomiter.survivorsbutchercraft.data.loot;
 
 import com.vomiter.survivorsbutchercraft.butchery.carcass.Carcass;
 import com.vomiter.survivorsbutchercraft.common.registry.SBBlocks;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.data.loot.BlockLootSubProvider;
 import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.level.block.Block;
-import net.minecraftforge.registries.RegistryObject;
+import net.neoforged.neoforge.registries.DeferredHolder;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
 public class ButcherHeadAndHideBlockLootTables extends BlockLootSubProvider {
-    public ButcherHeadAndHideBlockLootTables() {
-        super(Set.of(), FeatureFlags.REGISTRY.allFlags());
+
+    public ButcherHeadAndHideBlockLootTables(HolderLookup.Provider registries) {
+        super(Collections.emptySet(), FeatureFlags.REGISTRY.allFlags(), registries);
     }
 
     @Override
     protected void generate() {
         for (Carcass carcass : Carcass.values()) {
-            RegistryObject<Block> hide = SBBlocks.HIDE_CARPETS.get(carcass);
+            DeferredHolder<Block, ? extends Block> hide = SBBlocks.HIDE_CARPETS.get(carcass);
             if(hide != null){
                 dropSelf(hide.get());
             }
 
-            RegistryObject<Block> head = SBBlocks.HEADS.get(carcass);
-            RegistryObject<Block> wallHead = SBBlocks.WALL_HEADS.get(carcass);
-            RegistryObject<Block> skull = SBBlocks.SKULLS.get(carcass);
-            RegistryObject<Block> wallSkull = SBBlocks.WALL_SKULLS.get(carcass);
+            DeferredHolder<Block, ? extends Block> head = SBBlocks.HEADS.get(carcass);
+            DeferredHolder<Block, ? extends Block> wallHead = SBBlocks.WALL_HEADS.get(carcass);
+            DeferredHolder<Block, ? extends Block> skull = SBBlocks.SKULLS.get(carcass);
+            DeferredHolder<Block, ? extends Block> wallSkull = SBBlocks.WALL_SKULLS.get(carcass);
             dropSelf(head.get());
             dropOther(wallHead.get(), head.get());
             dropSelf(skull.get());
@@ -35,10 +38,10 @@ public class ButcherHeadAndHideBlockLootTables extends BlockLootSubProvider {
 
 
             if (carcass.hasMaleHead()) {
-                RegistryObject<Block> maleHead = SBBlocks.HEADS_MALE.get(carcass);
-                RegistryObject<Block> maleWallHead = SBBlocks.WALL_HEADS_MALE.get(carcass);
-                RegistryObject<Block> maleSkull = SBBlocks.SKULLS_MALE.get(carcass);
-                RegistryObject<Block> maleWallSkull = SBBlocks.WALL_SKULLS_MALE.get(carcass);
+                DeferredHolder<Block, ? extends Block> maleHead = SBBlocks.HEADS_MALE.get(carcass);
+                DeferredHolder<Block, ? extends Block> maleWallHead = SBBlocks.WALL_HEADS_MALE.get(carcass);
+                DeferredHolder<Block, ? extends Block> maleSkull = SBBlocks.SKULLS_MALE.get(carcass);
+                DeferredHolder<Block, ? extends Block> maleWallSkull = SBBlocks.WALL_SKULLS_MALE.get(carcass);
                 dropSelf(maleHead.get());
                 dropOther(maleWallHead.get(), maleHead.get());
                 dropSelf(maleSkull.get());
@@ -56,39 +59,39 @@ public class ButcherHeadAndHideBlockLootTables extends BlockLootSubProvider {
         Set<Block> blocks = new HashSet<>();
 
         SBBlocks.HIDE_CARPETS.values().stream()
-                .map(RegistryObject::get)
+                .map(DeferredHolder::get)
                 .forEach(blocks::add);
 
         SBBlocks.HEADS.values().stream()
-                .map(RegistryObject::get)
+                .map(DeferredHolder::get)
                 .forEach(blocks::add);
 
         SBBlocks.WALL_HEADS.values().stream()
-                .map(RegistryObject::get)
+                .map(DeferredHolder::get)
                 .forEach(blocks::add);
 
         SBBlocks.HEADS_MALE.values().stream()
-                .map(RegistryObject::get)
+                .map(DeferredHolder::get)
                 .forEach(blocks::add);
 
         SBBlocks.WALL_HEADS_MALE.values().stream()
-                .map(RegistryObject::get)
+                .map(DeferredHolder::get)
                 .forEach(blocks::add);
 
         SBBlocks.SKULLS.values().stream()
-                .map(RegistryObject::get)
+                .map(DeferredHolder::get)
                 .forEach(blocks::add);
 
         SBBlocks.WALL_SKULLS.values().stream()
-                .map(RegistryObject::get)
+                .map(DeferredHolder::get)
                 .forEach(blocks::add);
 
         SBBlocks.SKULLS_MALE.values().stream()
-                .map(RegistryObject::get)
+                .map(DeferredHolder::get)
                 .forEach(blocks::add);
 
         SBBlocks.WALL_SKULLS_MALE.values().stream()
-                .map(RegistryObject::get)
+                .map(DeferredHolder::get)
                 .forEach(blocks::add);
 
 
